--- a/style/style.css
+++ b/style/style.css
@@ -16,3 +16,13 @@
 body{
     font-family: "Inter", sans-serif;
 }
+
+
+.active {
+    background-color: #17803d;
+    color: white;
+    width: 100%;
+    border-radius: 8px;
+    text-align: left;
+    padding: 10px 10px;
+}
